# safety-kernel

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: boundaries.toml
contracts/openapi/: safety_kernel.yaml
crates/adapters/: Cargo.toml
crates/adapters/safety_kernel_client/: Cargo.toml
crates/adapters/safety_kernel_client/src/: circuit_breaker.rs  client.rs  lib.rs  mtls.rs  reqwest_client.rs  token.rs  types.rs
crates/adapters/safety_kernel_client/tests/: adversarial.rs  ary1889_f7_live_equivalence.rs  boundary_check.rs  equivalence.rs  mtls_smoke.rs  purple_team_ary1883.rs  seed_af_key.rs  traceparent.rs
crates/adapters/safety_kernel_client/tests/fixtures/equivalence/: authorize_inference.json  authorize_rsi.json  health.json  public_key.json
crates/adapters/safety_kernel_client/tests/purple/: adversarial_campaigns.rs  cert_pinning_bypass.rs
crates/adapters/safety_kernel_middleware/: Cargo.toml
crates/adapters/safety_kernel_middleware/src/: client_trait.rs  error.rs  extractor.rs  layer.rs  lib.rs  policy.rs  service.rs  token.rs
crates/adapters/src/: clock.rs  lib.rs  nonce.rs  policy_engine_client.rs
crates/adapters/transparency_store/: Cargo.toml
crates/adapters/transparency_store/migrations/: 0001_transparency_log.sql
crates/adapters/transparency_store/src/: lib.rs  memory.rs  postgres.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs  safety_kernel.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/safety/: api_action_allowlist.rs  claims.rs  client_state.rs  decision.rs  episodic_chain.rs  error.rs  mod.rs  token.rs
crates/domain/src/safety/policy/: claims.rs  import_discipline_test.rs  mod.rs  types.rs  validation.rs
crates/domain/src/transparency/: merkle.rs  mod.rs  sth.rs
crates/domain/src/wave/: context.rs  gate_surface.rs  learning.rs  mod.rs  roles.rs  session_record.rs  stage.rs
crates/services/safety-kernel/: Cargo.toml
crates/services/safety-kernel-reconciler/: Cargo.toml
crates/services/safety-kernel-reconciler/src/: lib.rs  main.rs  reconciler.rs
crates/services/safety-kernel-reconciler/tests/: manifest_http.rs  purple_manifest_replay.rs
crates/services/safety-kernel/benches/: policy_authorize_p99.rs
crates/services/safety-kernel/scripts/: gen_dev_certs.sh
crates/services/safety-kernel/src/: auth.rs  dto.rs  lib.rs  main.rs  settings.rs  state.rs  tls.rs  transparency_client.rs
crates/services/safety-kernel/src/routes/: approvals.rs  authorize.rs  meta.rs  mod.rs
crates/services/safety-kernel/src/routes/policy/: audit_event.rs  authorize.rs  mod.rs  register.rs  status.rs
crates/services/safety-kernel/tests/: authorize_transparency_log.rs  policy_audit_chain_integrity.rs  policy_forged_event_fingerprint.rs  policy_real_decision_e2e.rs  policy_registry_bypass.rs  policy_replay_within_ttl.rs  policy_routes_auth.rs  policy_routes_charset.rs  policy_routes_scaffold.rs  policy_signature_forgery.rs  purple_tlog_malformed_response.rs  purple_tlog_wire.rs  seed_af_image.rs  smoke_e2e.rs  test_authorize_emits_ledger_leaf.rs  test_transparency_http_wiremock.rs  tls_smoke.rs
crates/services/safety-kernel/tests/common/: mod.rs
crates/services/safety-kernel/tests/perf/: __init__.py  _grade_perf.py  conftest.py  policy_authorize_e2e.py
crates/services/transparency-log/: Cargo.toml
crates/services/transparency-log/src/: auth.rs  dto.rs  error.rs  lib.rs  main.rs  router.rs  settings.rs  state.rs  tls.rs
crates/services/transparency-log/src/routes/: append.rs  consistency.rs  mod.rs  sth.rs  verify.rs  wave_session.rs
crates/services/transparency-log/tests/: full_round_trip.rs  integration_wave_session.rs  load_wave_session.rs  purple_forged_sth.rs  purple_idempotency_collision.rs  purple_tier2_unfireable.rs  test_adversarial_entry_deletion.rs  test_adversarial_fake_pass.rs  test_adversarial_forged_kernel_signature.rs  test_adversarial_payload_tampered_proof.rs  test_mtls_smoke.rs
docs/: PUBLISHING.md
docs/release-gate/: af-taxonomy.md
examples/middleware/: __init__.py  dispatch_hook.py  fastapi_safety_middleware.py  grpc_interceptor.py  handler_guard.py  nginx_policy.conf
examples/observability/: __init__.py  grafana_dashboard.json  kernel_call_metrics.py
examples/policy/: __init__.py  default_policy.py  policy_rule_dsl.py
examples/reference_app/: __init__.py  app.py  docker-compose.yml  pyproject.toml
examples/reference_app/tests/: test_adversarial.py  test_fail_closed.py
examples/reference_app_rs/: Cargo.toml
examples/reference_app_rs/src/: lib.rs  main.rs
examples/reference_app_rs/tests/: end_to_end.rs
examples/testing/: __init__.py  adversarial_fixtures.py  mock_kernel.py
py-defense/: README.md  pyproject.toml
py-defense/safety_kernel_defense/: _wire.py  exceptions.py  install_audit_hook.py  subprocess_propagation.py
py-defense/safety_kernel_defense/tests/: _mock_kernel.py  conftest.py  test_install_audit_hook.py  test_subprocess_propagation.py  test_warm_stdlib_deps.py
scripts/: audit_adversarial_coverage.sh
