# Rust workspace root for QantmOrchstrtr-RSI.
#
# Per ADR-014 (Rust + Postgres migration), the codebase migrates business
# logic / RPC / state surfaces from Python to Rust via strangler fig.
# Python remains at python/ai-service/ for AI/ML/science work.
#
# Workspace layout (per agent/boundaries.toml — Jankurai reference profile):
#   crates/domain/        — pure types and traits, NO I/O / network / clock / RNG
#   crates/application/   — use cases that orchestrate the domain
#   crates/adapters/      — HTTP / DB / queue clients (the only place I/O lives)
#   crates/workers/       — background jobs and long-running processes
#
# Build:    cargo build --workspace
# Test:     cargo test --workspace
# Lint:     cargo clippy --workspace --all-targets -- -D warnings
# Format:   cargo fmt --all
[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/adapters",
    "crates/workers",
    "crates/services/safety-kernel",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Proprietary"
repository = "https://github.com/ARYA-Labs-PBC/QantmOrchstrtr-RSI"
authors = ["ARYA Labs <eng@aryalabs.io>"]

[workspace.dependencies]
# Phase 3a / Slice 1 (Safety Kernel Rust port) pins.
# Per ADR-014 §6.2 (`docs/adr/adr-014-slice-1-equivalence.md`):
#   - NO `jsonwebtoken` (custom compact form, not JWT — see §6.3 anti-pin).
#   - NO `serde_json` `preserve_order` feature: byte stability comes from
#     sorting via `BTreeMap`, not insertion order.
#   - `tracing` / `tracing-subscriber` are NOT for the domain crate
#     (forbidden by `agent/boundaries.toml`); service + adapters only.
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "io-util", "process", "fs", "sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytes = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
# Faster iteration; debug info on. Trade-off: larger binaries (we don't ship dev).
debug = true
incremental = true
