# crates/domain — pure types and traits for the safety-kernel.
#
# NO I/O, NO network, NO clock, NO RNG. Adapters in `crates/adapters/`
# implement the I/O for the traits declared here.
[package]
name = "qorch-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure types and traits for the safety-kernel — claims, tokens, decisions, transparency log primitives. No I/O."
keywords = ["safety", "authorization", "audit", "transparency-log"]
categories = ["data-structures", "cryptography"]
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde-big-array = "0.5"
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
