# crates/services/safety-kernel — Rust port of the Safety Kernel HTTP
# service (ADR-014 / ARY-1990 Phase 3a).
#
# W1 commit was the boot stub. W2 (this commit) wires the axum router,
# auth middleware, the 6 endpoints, and the Unix-socket policy IPC.
[package]
name = "qorch-safety-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust port of the QantmOrchstrtr-RSI Safety Kernel HTTP service."

[[bin]]
name = "qorch-safety-kernel"
path = "src/main.rs"

[features]
# `test-seams`: enable header-based clock/nonce overrides so the
# equivalence harness can pin both impls to identical wall-clock and
# nonce values without spawning one binary process per fixture.
#
# The override is silently rejected (no override applied) when this
# feature is OFF — production builds (default features) do NOT honor
# `x-test-fixed-clock` / `x-test-fixed-nonce` headers.
test-seams = []

[dependencies]
qorch-domain = { path = "../../domain" }
qorch-application = { path = "../../application" }
qorch-adapters = { path = "../../adapters" }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }

# Slice 1 / Phase 3a additions for W2:
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# ARY-2028 slice 2 — kernel-side regex pre-validation per ADR-018 §5.
# RE2-style DFA engine, NO backtracking — `fancy-regex`, `pcre2`, `onig`
# are explicitly forbidden by the ADR. Pre-validation in the kernel
# guarantees that patterns reaching the Python sidecar are
# RE2-compatible (cross-language equivalence note in ADR-018 §5).
regex = "1"

[dev-dependencies]
# Smoke test harness (e2e: spawn Python sidecar + bind Rust binary +
# curl the endpoints). `reqwest` used in `tests/smoke_e2e.rs` AND in
# `benches/policy_authorize_p99.rs` (blocking client for criterion).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tempfile = "3"
rand_core = { workspace = true }
sha2 = { workspace = true }
# In-process router exercise (ARY-2028 slice 1 scaffold tests). `tower`
# brings `ServiceExt::oneshot` for firing requests at the router without
# binding a socket; `http-body-util` collects response bodies.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
# ARY-2028 slice 5 §3.2: criterion microbench for `POST /policy/module/authorize`.
# Informational only — the gating p99 number is the pytest-benchmark
# e2e harness at `tests/perf/policy_authorize_e2e.py`. `harness = false`
# on the `[[bench]]` entry below tells cargo to defer to criterion's
# `criterion_main!` macro instead of the default libtest harness.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# ARY-2028 slice 5 §3.2: criterion bench for `POST /policy/module/authorize`.
# `harness = false` -> criterion provides its own `main()`. Run via:
#   cargo bench -p qorch-safety-kernel --bench policy_authorize_p99 -- --quick
[[bench]]
name = "policy_authorize_p99"
harness = false

[lints.rust]
unused_imports = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
